# synthetic-data-agent

./: .gitignore  BUGFIXES.md  CLAUDE.md  PRIORITY_1_COMPLETE.md  PRIORITY_3_COMPLETE.md  PRIORITY_4_COMPLETE.md  PROGRESS_SUMMARY.md  README.md  code_to_markdown.py  create_database.py  inspect_database.py  main.py  project_goals.md  pyproject.toml  review_test_run.py  session-4179d31c-29df-4858-889f-b292838c3300.json  test_database_updates.py  test_research_agent.py  test_workflow_direct.py  tree.py
.claude/: settings.local.json
db/: synthetic_data.db
docs/: AGENT_INTEGRATION_GUIDE.md  CODE_EXECUTION_SUB_AGENTS_FIX.md  COMPREHENSIVE_PROJECT_REVIEW.md  DATABASE_INSPECTION.md  DIRECTORY_REORGANIZATION.md  IMPLEMENTATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  PHASE_1.1_IMPLEMENTATION.md  PHASE_1.2_2.3_IMPLEMENTATION.md  PHASE_1.3_IMPLEMENTATION.md  PHASE_1.4_1.5_IMPLEMENTATION.md  PHASE_2.1_2.2_IMPLEMENTATION.md  PRIORITY_2_COMPLETE.md  PRIORITY_5_COMPLETE.md  PROJECT_SYNTHESIS.md  QUESTION_AGENT_MODEL_FIX.md  REVISED_ARCHITECTURE.md  SYNTHESIS_SUMMARY.txt  TEST_RUN_REVIEW.md  architecture.md  chat_templates.md  codebase.md  data_formats.md  implementation.md  types_of_llm_fine_tuning.md
examples/: print_database.py
guides/: A2A_Guide_1_Getting_Started.md  A2A_Guide_1_Getting_Started_code.md  A2A_Guide_2_Single_Agent_Development.md  A2A_Guide_2_Single_Agent_Development_code.md  A2A_Guide_3_Multi_Agent_Systems.md  A2A_Guide_3_Multi_Agent_Systems_code.md  A2A_Guide_4_Framework_Integration.md  A2A_Guide_4_Framework_Integration_code.md  A2A_Guide_5_MCP_Integration.md  (+7 more)
(+76 files in other folders)
