[project]
name = "synthetic-data-agent"
version = "0.1.0"
description = "Agentic system for generating high-quality synthetic data for LLM post-training"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.21.0",
    "google-genai>=1.55.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
